--- a/public/locales/MY/translation.json
+++ b/public/locales/MY/translation.json
@@ -14,7 +14,7 @@
     "388games": "388Games မူဝါဒ",
     "Remember": "မှတ်ထားပေးပါ",
     "Forgot_Password": "မေ့သွားသလား?",
-    "Login": "ဝင်မည်",
+    "login": "ဝင်မည်",
     "join_now": "စရင်းသွင်းရန်",
     "create_account": "အကောင့်အသစ်",
     "username": "အမည်",
@@ -103,7 +103,7 @@
     "notes": "မှတ်စု",
     "important_notes": "သတိပြုရန်",
     "note_description": "ဤစာမျက်နှာတွင် နောက်ဆုံးဖော်ပြထားသည့် ဘဏ်အကောင့်ကိုသာ ငွေသွင်းပါ။ အကယ်၍ အကောင့်အဟောင်းများသို့ ငွေသွင်းမိ၍ နှောင့်နှေးခြင်း၊ ဆုံးရှုံးခြင်းများ ဖြစ်ပေါ်လာပါက တာဝန်ယူမည် မဟုတ်ပါ။",
-    "withdrawal": "သွင်းငွေ 1x ဆမှသာငွေထုတ်ခွင့်ရှိသည်",
+    "withdrawal_": "သွင်းငွေ 1x ဆမှသာငွေထုတ်ခွင့်ရှိသည်",
     "withdrawing": "ငွေထုတ်စဉ် အကောင့်နံပါတ် မှားယွင်းရိုက်နှိပ်မိပါက ကျွန်ုပ်တို့ တာဝန်ယူမည် မဟုတ်ပါ",
     "notification": "ဤစာမျက်နှာတွင် နောက်ဆုံးဖော်ပြထားသည့် ဘဏ်အကောင့်ကိုသာ ငွေသွင်းပါ။ အကယ်၍ အကောင့်အဟောင်းများသို့ ငွေသွင်းမိ၍ နှောင့်နှေးခြင်း၊ ဆုံးရှုံးခြင်းများ ဖြစ်ပေါ်လာပါက တာဝန်ယူမည် မဟုတ်ပါ။",
     "username_required": "အသုံးပြုသူအမည်လိုအပ်ပါသည်",
@@ -201,5 +201,41 @@
     "your_password_has_been_changed_successfully":"သင့်စကားဝှက်ကို အောင်မြင်စွာ ပြောင်းလဲပြီးပါပြီ။",
     "game_currently_maintenance":"ဂိမ်းကို လောလောဆယ် ထိန်းသိမ်းထားပါတယ်။",
     "game_license": "ဂိမ်းလိုင်စင်",
-    "save_qr": "SAVE QR"
+    "save_qr": "SAVE QR",
+
+
+
+
+
+
+
+
+
+    "region_and_language":"ဒေသနှင့် ဘာသာစကား",
+    "contact_us":"ဆက်သွယ်ရန်",
+    "wallet":"ပိုက်ဆံအိတ်",
+    "old_password":"စကားဝှက်အဟောင်း",
+    "new_password":"စကားဝှက်အသစ်",
+    "confirm_new_password":"စကားဝှက်အသစ်ကို အတည်ပြုပါ။",
+    "balance":"လက်ကျန်",
+    "transaction_record":"ငွေလွှဲမှတ်တမ်း",
+    "withdrawal":"ငွေထုတ်ခြင်း။",
+    "forget_password":"စကားဝှက်ကိုမေ့ပါ။",
+    "deposit_amount":"အပ်ငွေပမာဏ",
+    "real_deposit_amount":"အစစ်အမှန်အပ်ငွေပမာဏ",
+    "bankslip":"ဘဏ်စလစ်",
+    "bonus":"ဘောနပ်စ်",
+    "no_bonus":"ဘောနပ်စ် မရှိပါ။",
+    "notice":"အသိပေးစာ",
+    "minimum_deposit_5000":"အနည်းဆုံးအပ်ငွေက 5000 ဖြစ်ပါတယ်။",
+    "rate_deposit":"အပ်ငွေနှုန်း",
+    "rate_withdrawal":"ငွေထုတ်နှုန်း",
+    "minimum_withdrawal":"အနိမ့်ဆုံးငွေထုတ်သည် ဖြစ်သည်။",
+    "turnover_amount":"လည်ပတ်ငွေပမာဏ",
+    "withdrawal_amount":"ငွေထုတ်ပမာဏ",
+    "real_withdrawal_amount":"အစစ်အမှန်ငွေထုတ်ပမာဏ",
+    "account_bank":"အကောင့်ဘဏ်",
+    "bank_holder":"ဘဏ်ပိုင်ရှင်",
+    "bank_account_no":"ဘဏ်အကောင့်နံပါတ်",
+    "history":"သမိုင်း"
 }
