fix bug, add deposit, withdraw api

--- a/public/locales/EN/translation.json
+++ b/public/locales/EN/translation.json
@@ -103,7 +103,7 @@
     "notes": "Notes",
     "important_notes": "Important Notes",
     "note_description": "Please always deposit to the latest bank shown on this page. If you deposit money into an old bank account and cause any delayed or lost, we will not be responsible.",
-    "withdrawal_": "Withdrawal are subjected to a 1x wagering requirement.",
+    "withdrawal": "Withdrawal are subjected to a 1x wagering requirement.",
     "withdrawing": "We are not liable for losses if you enter the wrong account when withdrawing cash.",
     "notification": "Please always deposit to the latest bank shown on this page. If you deposit money into an old bank account and cause any delayed or lost, we will not be responsible.",
     "username_required": "Username is required",
@@ -217,7 +217,6 @@
     "new_password":"New Password",
     "confirm_new_password":"Confirm New Password",
     "transaction_record":"Transaction Record",
-    "withdrawal":"Withdrawal",
     "forget_password":"Forget Password",
     "deposit_amount":"Deposit Amount",
     "real_deposit_amount":"Real Deposit Amount",
