fix: game item category

--- a/public/locales/EN/translation.json
+++ b/public/locales/EN/translation.json
@@ -73,7 +73,7 @@
     "transaction_period": "Transaction Period",
     "payment_type": "Payment Type",
     "payment": "Payment",
-    "all": "All",
+    "all": "ALL",
     "search": "Search",
     "date_time": "DATE & TIME",
     "code": "CODE",
