--- a/public/locales/EN/translation.json
+++ b/public/locales/EN/translation.json
@@ -202,7 +202,11 @@
     "game_currently_maintenance":"Game currently maintenance",
     "game_license": "Gaming License",
     "save_qr": "SAVE QR",
-
+    "received": "Received",
+    "to": "to",
+    "rate_is": "rate is",
+    "network": "Network",
+    "wallet_address": "Wallet Address",
 
 
 
